Fix Vw and Scrollbar X

--- a/style.css
+++ b/style.css
@@ -92,7 +92,10 @@ img {
   }
   h1 {
     padding: 10px 0 20px 0;
-    font-size: 50px;
+    font-size: 30px;
+  }
+  .row{
+    width: 100vw;
   }
   /* End Container Lezioni */
 
@@ -138,8 +141,12 @@ img {
   /* End MediaQuery */
 
   /* Start MediaQuery */ 
-@media screen and (min-width: 420px) and (max-width: 1000px) {
+@media screen and (min-width: 420px) and (max-width: 800px) {
   /* Start Container Lezioni */
+  .row{
+   width: 100vw;
+  }
+
   #lezioni .row>.left,
   #lezioni .row>.right {
     width: 90%;
@@ -161,13 +168,25 @@ img {
   /* End Container Lezioni */
 
   /* Start Container Steps */
+  #steps .left img,
+  #steps .right img,
+  #steps .central img{
+    width: 90%;
+    height: 100%;
+  }
   #steps .row{
     background-color: rgb(10, 10, 10);
     padding: 20px 20px;
     color: #fff;
+    width: 90%;
+    margin: auto;
+    border-radius: 20px;
   }
   #steps h3{
     margin: 10px 0;
+  }
+  #steps{
+    background-color: #fff;
   }
    /* End Container Steps */
 
@@ -178,7 +197,7 @@ img {
   #why .row>.first,
   #why .row>.second,
   #why .row>.third {
-    width: 90%;
+    width: 85%;
     margin: auto;
     margin-top: 30px;
     background-color: #f9f9f9;
